--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -15,6 +15,10 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    env:
+      CARGO_INCREMENTAL: 0
+      SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: "sccache"
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
@@ -25,9 +29,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt clippy
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: "v1-rust"
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
@@ -38,6 +41,10 @@ jobs:
   doc:
     name: Doc
     runs-on: ubuntu-latest
+    env:
+      CARGO_INCREMENTAL: 0
+      SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: "sccache"
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
@@ -46,9 +53,8 @@ jobs:
           packages: protobuf-compiler libasound2-dev
           version: v0
       - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: "v1-rust"
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
@@ -58,6 +64,10 @@ jobs:
         run: cargo doc --workspace --no-deps
   test:
     name: Test
+    env:
+      CARGO_INCREMENTAL: 0
+      SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: "sccache"
     strategy:
       matrix:
         os:
@@ -76,9 +86,8 @@ jobs:
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: "v1-rust"
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
       - run: |
           curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 && \
           chmod +x tailwindcss-linux-x64 && \
